@@ -57,23 +57,29 @@ dialog box : <br>
 </div>
 <br>
 Hardware link cables have not been tested yet. For this reason, keep
+cable and port
 settings to <span style="font-style: italic;">null</span>.<br>
 <br>
 <div style="margin-left: 40px;">To connect VTi and TiEmu:<br>
 - run VTi; next, run TiEmu<br>
-- choose VTi cable, port #2<br>
+- choose <span style="font-style: italic;">VTi</span> cable, <span
+ style="font-style: italic;">port #2</span><br>
 - open VTi menu, go to <span style="font-style: italic;">Enable Cable
 Link</span> and be sure that <span style="font-style: italic;">Virtual
 Link</span> is checked.<br>
 <br>
 To connect TiLP and TiEmu:<br>
 - run TiEmu; next, run TiLP<br>
-- choose TiEmu cable, port #1 in TiEmu<br>
-- choose TiEmu cable, port #2 in TiLP<br>
+- choose <span style="font-style: italic;">TiEmu</span> cable, <span
+ style="font-style: italic;">port #1</span> in TiEmu<br>
+- choose <span style="font-style: italic;">TiEmu</span> cable, <span
+ style="font-style: italic;">port #</span>2 in TiLP<br>
 <br>
 To connect TiEmu and TiEmu:<br>
 - run 2x TiEmu<br>
-- choose TiEmu cable, port #1 and port #2<br>
+- choose <span style="font-style: italic;">TiEmu</span> cable on both,
+<span style="font-style: italic;">port #1</span> and <span
+ style="font-style: italic;">port #2</span> respectively.<br>
 </div>
 <br>
 [To complete...]<br>
